--- a/Foo.fsproj
+++ b/Foo.fsproj
@@ -6,6 +6,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>Foo</RootNamespace>
     <OtherFlags>$(OtherFlags) --warnon:1182</OtherFlags>
+    <WarningLevel>5</WarningLevel>
   </PropertyGroup>
 
   <ItemGroup>
